Add dracula to our team section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
         <h5>SCIENCE</h5>
     </div>
     </div>
+
     <h3 class="specialise">Our team</h3>
-    
+    <div class="dracula-blood">
+        <img class="dracula-team"src="./images/Dracula-blood.png" alt="">
+        <div class="text-blood">
+            <h1>BLOOD</h1>
+        </div>
+    </div>
 
     <section class="section">
         <h2 class="title">Count Dracula</h2>
@@ -241,7 +247,7 @@
     <div class="contact">
         <ul>
             <li>
-                <h5 class="title-footer">Contact</h5>
+                <h5 class="title-footer1">Contact</h5>
             </li>
             <li class="text-contact">
                 hello@monsters.com
@@ -258,7 +264,7 @@
     <div class="social-media">
         <ul>
             <li>
-                <h5 class="title-footer">Follow us</h5>
+                <h5 class="title-footer2">Follow us</h5>
             </li>
             <li class="icono">
                 <img class="social" src="./images/facebook.png" alt="">
