Create our team section

--- a/index.html
+++ b/index.html
@@ -36,11 +36,56 @@
     </div>
 
     <h3 class="specialise">Our team</h3>
-    <div class="dracula-blood">
-        <img class="dracula-team"src="./images/Dracula-blood.png" alt="">
-        <div class="text-blood">
+
+    <div class="allTeam">
+    <div class="ourTeam">
+        <img class="character-team"src="./images/Dracula-blood.png" alt="">
+        <div class="text-team">
             <h1>BLOOD</h1>
         </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/brideDeath.png" alt="">
+            <div class="text-team">
+                <h1>DEATH</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/wolfFury.png" alt="">
+            <div class="text-team">
+                <h1>FURY</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/creaturePower.png" alt="">
+            <div class="text-team">
+                <h1>POWER</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/mummyLove.png" alt="">
+            <div class="text-team">
+                <h1>LOVE</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/frankensteinDeath.png" alt="">
+            <div class="text-team">
+                <h1>DEATH</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/operaPain.png" alt="">
+            <div class="text-team">
+                <h1>PAIN</h1>
+            </div>
+    </div>
+    <div class="ourTeam">
+            <img class="character-team"src="./images/invisibleScience.png" alt="">
+            <div class="text-team">
+                <h1>SCIENCE</h1>
+            </div>
+    </div>
     </div>
 
     <section class="section">
