--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <dir class="logo">
+        <a href="https://margamb.github.io/web-projects">
+            <img src="./images/logo.png" alt="">
+        </a>
+    </dir>
     <div>
         <img class="header" src="./images/header-the-monsters-squad1.png" alt="the monster squad">
     </div>
@@ -325,9 +330,17 @@
             </li>    
         </ul>
     </div> 
-    </div>       
+    </div> 
+    <div class="marga">
+            <h6>
+                Illustration by
+                <a class="link" href="http://margamartinez.com">Marga Martinez</a>
+            </h6>
+        </div>   
+       
                 
 </div>
+
 
 
 
