Add responsive design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <p>Our film franchise is cataloged as the first cinematographic universe in history. It belongs to the monsters mash genre.</p>
     </div>
 
-    
+    <div class="two-parts">
+    <div class="partOne">    
     <h3 class="parts-team">Our specialise in</h3>
     <div class="photo-specialise">
         <div class="specialty">
@@ -39,7 +40,10 @@
         <h5>SCIENCE</h5>
     </div>
     </div>
+    </div>
 
+
+    <div class="partTwo">
     <h3 class="parts-team">Our team</h3>
 
     <div class="allTeam">
@@ -92,9 +96,11 @@
             </div>
     </div>
     </div>
-
+    </div>
+    </div>
     <section class="section">
         <h2 class="title">Count Dracula</h2>
+        <div class="section-character">
         <p>
             Count Dracula leaves the Carpathians and moves to the West, taking as servant an accountant. Once installed, he falls in love with a young woman who is already engaged. He begins to visit her at night and slowly dries his blood to turn her into his wife. But the malaise that the young woman suffers alerts her family, who seeks the help of Dr. Van Helsing.
         </p>
@@ -116,10 +122,12 @@
             </li>
         </ul>
         </div>
+        </div>
     </section>
 
     <section class="section">
         <h2 class="title">Frankenstein, the monster</h2>
+        <div class="section-character">
         <p>
             Henry Frankenstein is a doctor who is trying to discover a way to make the dead walk. He succeeds and creates a monster that has to deal with living again.
         </p>
@@ -140,11 +148,13 @@
                 </li>
             </ul>
             <img class="photo" src="./images/frankenstein.png" alt="">
-            </div>   
+            </div> 
+        </div>
         </section>
 
     <section class="section">
         <h2 class="title">Mary Wollstonecraft Shelley. The Monster's Mate</h2>
+        <div class="section-character">
         <p>
             After the escape of the monster created by Dr. Frankenstein, the sinister Dr. Praetorius proposes to the scientist the creation of a companion for the monster.
         </p>
@@ -163,10 +173,12 @@
                 </li>
             </ul>
         </div>
+        </div>
     </section>
 
     <section class="section">
         <h2 class="title">Larry Talbot</h2>
+        <div class="section-character">
         <p>
             After his brother´s death, Larry Talbot returns home to his father and the family estate. Events soon take a turn for the worse when Larry is bitten by a werewolf.
         </p>
@@ -184,11 +196,13 @@
                 </li>
             </ul>
             <img class="photo" src="./images/wolf.png" alt="">
-        </div>   
+        </div> 
+        </div>  
     </section>
 
     <section class="section">
         <h2 class="title">Imhotep</h2>
+        <div class="section-character">
         <p>
             An ancient Egyptian priest called Imhotep is revived when an archaeological expedition finds his mummy and one of the archaeologists accidentally reads an ancient life-giving spell. Imhotep, escaping from the field site, goes in search for the reincarnation of the soul of his lover.                        
         </p>               
@@ -206,10 +220,12 @@
                 </li>
             </ul>
         </div>
+        </div>
     </section>
 
     <section class="section">
         <h2 class="title">Dr. Jack Griffin</h2>
+        <div class="section-character">
         <p>
             Working in Dr. Cranley’s laboratory, scientist Jack Griffin was always given the latitude to conduct some of his own experiments. His sudden departure, however, has Cranley’s daughter Flora worried about him. Griffin has taken a room at the nearby Lion’s Head Inn, hoping to reverse an experiment he conducted on himself that made him invisible. Unfortunately, the drug he used has also warped his mind, making him aggressive and dangerous. He’s prepared to do whatever it takes to restore his appearance, and several will die in the process.
         </p>
@@ -230,11 +246,13 @@
                 </li>
             </ul>
             <img class="photo" src="./images/invisible.png" alt="">
+        </div>
         </div>   
     </section>
 
     <section class="section">
         <h2 class="title">David Reed</h2>
+        <div class="section-character">
         <p>
             A strange prehistoric beast lurks in the depths of the Amazonian jungle. A group of scientists try to capture the animal and bring it back to civilization for study.
         </p>    
@@ -253,10 +271,12 @@
                 </li>
             </ul>
         </div>
+        </div>
     </section>
 
     <section class="section">
         <h2 class="title">The Phantom</h2>
+        <div class="section-character">
         <p>
             A grotesquely disfigured composer known as “The Phantom” haunts Paris’ opera house, where he’s secretly grooming Christine Daae to be an opera diva. Luring her to his remote underground lair, The Phantom declares his love. But Christine loves Raoul de Chagny and plans to elope with him. When The Phantom learns this, he abducts Christine.
         </p>
@@ -277,7 +297,8 @@
                 </li>
             </ul>
             <img class="photo" src="./images/phantom.png" alt="">
-        </div>   
+        </div> 
+        </div>  
     </section>
 
 
