Add the last two media queries

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </section>
 
     <section class="section">
-        <h2 class="title">Mary Wollstonecraft Shelley. The Monster's Mate</h2>
+        <h2 class="title">Mary Wollstonecraft Shelley.</h2>
         <div class="section-character">
         <p>
             After the escape of the monster created by Dr. Frankenstein, the sinister Dr. Praetorius proposes to the scientist the creation of a companion for the monster.
