Add anchor link

--- a/index.html
+++ b/index.html
@@ -47,58 +47,83 @@
     <h3 class="parts-team">Our team</h3>
 
     <div class="allTeam">
+    
+    <a class="invisible" href="#dracula">
     <div class="ourTeam">
         <img class="character-team"src="./images/Dracula-blood.png" alt="">
         <div class="text-team">
             <h1>BLOOD</h1>
         </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#bride">
     <div class="ourTeam">
             <img class="character-team"src="./images/brideDeath.png" alt="">
             <div class="text-team">
                 <h1>DEATH</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#wolf">
     <div class="ourTeam">
             <img class="character-team"src="./images/wolfFury.png" alt="">
             <div class="text-team">
                 <h1>FURY</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#creature">
     <div class="ourTeam">
             <img class="character-team"src="./images/creaturePower.png" alt="">
             <div class="text-team">
                 <h1>POWER</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#mummy">
     <div class="ourTeam">
             <img class="character-team"src="./images/mummyLove.png" alt="">
             <div class="text-team">
                 <h1>LOVE</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#frankenstein">
     <div class="ourTeam">
             <img class="character-team"src="./images/frankensteinDeath.png" alt="">
             <div class="text-team">
                 <h1>DEATH</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#opera">
     <div class="ourTeam">
             <img class="character-team"src="./images/operaPain.png" alt="">
             <div class="text-team">
                 <h1>PAIN</h1>
             </div>
     </div>
+    </a>
+
+    <a class="invisible" href="#invisible-man">
     <div class="ourTeam">
             <img class="character-team"src="./images/invisibleScience.png" alt="">
             <div class="text-team">
                 <h1>SCIENCE</h1>
             </div>
     </div>
+    </a>
+
     </div>
     </div>
     </div>
-    <section class="section">
+    <section class="section" id="dracula">
         <h2 class="title">Count Dracula</h2>
         <div class="section-character">
         <p>
@@ -125,7 +150,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="frankenstein">
         <h2 class="title">Frankenstein, the monster</h2>
         <div class="section-character">
         <p>
@@ -152,7 +177,7 @@
         </div>
         </section>
 
-    <section class="section">
+    <section class="section" id="bride">
         <h2 class="title">Mary Wollstonecraft Shelley.</h2>
         <div class="section-character">
         <p>
@@ -176,7 +201,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="wolf">
         <h2 class="title">Larry Talbot</h2>
         <div class="section-character">
         <p>
@@ -186,7 +211,7 @@
         <div class="container">
             <ul class="even">
                 <li>
-                    <strong>Film </strong><em> The walf man, 1941 USA</em>
+                    <strong>Film </strong><em> The wolf man, 1941 USA</em>
                 </li>
                 <li>
                     <strong>Director by </strong><em> George Waggner</em>
@@ -200,7 +225,7 @@
         </div>  
     </section>
 
-    <section class="section">
+    <section class="section" id="mummy">
         <h2 class="title">Imhotep</h2>
         <div class="section-character">
         <p>
@@ -223,7 +248,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="invisible-man">
         <h2 class="title">Dr. Jack Griffin</h2>
         <div class="section-character">
         <p>
@@ -250,7 +275,7 @@
         </div>   
     </section>
 
-    <section class="section">
+    <section class="section" id="creature">
         <h2 class="title">David Reed</h2>
         <div class="section-character">
         <p>
@@ -274,7 +299,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="opera">
         <h2 class="title">The Phantom</h2>
         <div class="section-character">
         <p>
